force-app/main/default/objects/ssot__RecruitmentPosting__dlm/fields/ssot__PostingTitleText__c.field-meta.xml
<CustomField>
    <fullName>ssot__PostingTitleText__c</fullName>
    <label>Posting Title</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PostingTitleText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>