force-app/main/default/objects/ssot__RecruitmentPosting__dlm/fields/ssot__RecruitmentPostCndSrcType__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecruitmentPostCndSrcType__c</fullName>
    <label>Candidate Source Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecruitmentPostCndSrcType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>