force-app/main/default/objects/ssot__RecruitmentPosting__dlm/fields/ssot__rel_1721371628663_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1721371628663_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RecruitmentPosting_RecruitmentRequis_rel</label>
    <referenceTo>ssot__RecruitmentRequisition__dlm</referenceTo>
    <relationshipLabel>RecruitmentPosting_RecruitmentRequis_rel</relationshipLabel>
    <relationshipName>rel_1721371628663_end</relationshipName>
    <type>Lookup</type>
</CustomField>